--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -5,16 +5,16 @@
 
 .menu {
   background-image: url("../images/background_menu.svg");
-     height: 100px;
   background-color: #0a2750;
   display: flex;
-  position: center;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .menu__title {
-  font-family: Noto Serif;
+  font-family:  "Serif";
 font-style: italic;
 font-weight: normal;
 font-size: 60px;
@@ -25,7 +25,6 @@ color: #2F80ED;
 .menu__subtitle {
   text-align: center;
   font-size: 24px;
-  line-height: 100px;
   font-weight: 780;
   margin: 24px 0 0;
 }
