--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -20,12 +20,12 @@
 }
 
 .menu__link {
-font-family: Noto Serif;
+font-family: Noto "Serif";
 font-style: italic;
 font-weight: normal;
 font-size: 20px;
 line-height: 30px;
-color: #2F80ED
+color: #2F80ED;
 }
 
 .recipe__link {
@@ -35,11 +35,3 @@ font-weight: 500;
 font-size: 44px;
 line-height: 52px;
 }
-
-.reservation__link {
-
-}
-
-.about__link {}
-
-.footer__ {}
