--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,8 +1,8 @@
 .recipes__title {
     max-width: 580px;
-    font-size: 80px;
-    line-height: 100px;
-    font-weight: 80px;
+    font-size: 44px;
+    line-height: 52px;
+    font-weight: 500;
 }
 
 .recipes__subtitle {
@@ -13,12 +13,25 @@
 .recipes__image {
     background-color: #FFFFFF;
     background-image: url(../images/background_recipes.svg);
-    position: center;
-    text-align: cover;
+    background-position: center;
+    background-size: cover;
 }
 
-.recipe__videos {}
+.recipes__videos {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    width: 100%;
+}
 
-.recipe__iframe {}
+.recipes__iframe {
+    width: 480px;
+    height: 273px;
+    border: none;
+}
 
-.recipes__video-caption {}
+
+.recipes__video-caption {
+    display: flex;
+    justify-content: space-between;
+}
