--- a/pages/index.css
+++ b/pages/index.css
@@ -9,3 +9,6 @@
 @import url("../blocks/nav.css");
 @import url("../blocks/reservation.css");
 @import url("../blocks/recipes.css");
+@import url("../blocks/about.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
