--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,46 +2,76 @@
     height: 100vh;
     min-height: 720px;
     max-height: 800px;
+    background-image: url("../images/background_header.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    margin:0 0 50px;
     padding-top: 30px;
     padding-left: 80px;
     padding-right: 80px;
-    position: relative;
-    background-origin: padding-box;
+    box-sizing: border-box;
+    z-index: -2;
 }
 
 .header__title {
-font-family: "Serif";
-font-style: italic;
- font-weight: normal;
- font-size: 60px;
- line-height: 72px;
- color: #2F80ED;
+    font-family: "Inter", Arial, sans-serif;
+    max-width: 729px;
+    margin-top: 202px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 72px;
+    margin-bottom: 28px;
+    
+}
+
+.header__address {
+    display: flex;
+    align-items: flex-end;
+    padding: 0;
+    margin: 0;
+    font-family: "Inter", "Arial", sans-serif;
+    font: 16px;
+    line-height: 20px;
 }
 
 .header__description {
- font-family: "Serif";
+ font-family: "Noto Serif", "Times New Roman", serif;
+ max-width: 729px;
   font-style: normal;
-  font-weight: normal;
-   }
+  font-size: 20px;
+  line-height: 30px;
+  padding-top: 20px;
+  z-index: 2;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .header__image {
-    position: absolute;
-    top: 124px;
-    right: 20px;
     max-width: 646px;
-    z-index: 1;
+    max-height: 568px;
+    right: 5px;
+    top: 124px;
+    z-index: -1;
+    position: absolute;
 }
 
 .header__footer {
-    position: absolute;
-    left: 0;
-    bottom: 40px;
     width: 100%;
+    position: absolute;
+    margin-top: auto;
     display: flex;
-    align-items: center;
-    padding: 40px 80px 0;
+    align-items: flex-end;
     justify-content: space-between;
     box-sizing: border-box;
+    left: 0px;
+    bottom: 0;
+    padding-bottom: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
 }
 
 .header__link {
@@ -53,30 +83,32 @@ font-style: italic;
     color: #2F80ED;
 }
 
-.header__address {
-    font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-margin-left: 0;
-color: #838383;
-}
-
 .header__span-accent {
-font-family: "Serif";
-font-style: italic;
-font-weight: normal;
-font-size: 60px;
-line-height: 72px;
-color: #2F80ED;
+    display: block;
+    width: 100%;
+    font-weight: 400;
+    font-family: "Noto Serif","Times New Roman", serif;
+    font-style: italic;
+    font-size: 60px;
+    line-height: 72px;
+    color: #2F80ED;
 }
 
-.footer__column-content-hours {
-    font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-margin-left: auto;
+.header__paragraph {
+    text-decoration: none;
+    font-family: "Inter", Arial, serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    padding-top: 0;
+    margin: 0;
+}
+
+.header__paragraph_address{
+      margin-right: 80px;
+  color: #6F6F6F;
+  position: absolute;
+  top: 40px;
+  right: 80px;
+  z-index: 2;
 }
