--- a/blocks/logo.css
+++ b/blocks/logo.css
@@ -1,6 +1,9 @@
 .logo {
-  width: 145px;
-  height: 25px;
+  position: relative;
+  width: 125px;
+  height: 142px;
+  top: 30px;
+  left: 30px;
   background-color: #FFFFFF;
   background-image: url("https://code.s3.yandex.net/web-code/logo_coffee_shop.svg");
   background-size: cover;
