--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,32 +1,43 @@
-.body {
-    font-family: "Inter";
-    background-color: #cccccc;
-}
-
 .menu {
+  color: white;
   background-image: url("../images/background_menu.svg");
   background-color: #0a2750;
-  display: flex;
-  justify-content: center;
+  padding: 100px 100px 45px;
+  /* display: flex;
+  flex-direction: column;
   align-items: center;
-  flex-direction: row;
-  flex-wrap: wrap;
+} */
 }
-
 .menu__title {
-  font-family:  "Serif";
-font-style: italic;
-font-weight: normal;
-font-size: 60px;
-line-height: 72px;
-color: #2F80ED;
+  font-family:  "Inter", serif;
+ font-weight: 500;
+ font-size: 44px;
+line-height: 52px;
+color: #2F80ED; 
+text-align: center;
+margin: 0 0 24px;
   }
 
 .menu__subtitle {
+ font-family: "Noto Serif", "Times New Roman", serif;
+ width: 780px;
+ margin-left: auto;
+ margin-right: auto;
+ margin-bottom: 0 auto;
+font-size: 20px;
   text-align: center;
   font-size: 24px;
-  font-weight: 780;
-  margin: 24px 0 0;
+  line-height: 30px;
+  color: #fff;
+}
+
+.menu__cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 17px 40px;
+  margin-top: 71px;
+  flex-wrap: wrap;
 }
 
 
