--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,25 +1,25 @@
-.form__fieldset {
-    display: flex;
+
+.reservation {
+    background-image: url("../images/background_reservation.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #D9E7FF;
+    padding:100px 80px 100px;
 }
 
 .reservation__title {
-    font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 44px;
-line-height: 52px;
-max-width: 385px;
-margin: 0 auto;
-text-align: center;
-}
-
-.reservation {
-    padding: 100px 120px;
-    background-image: url("../images/background_reservation.svg");
+    font-family: "Inter", Arial,sans-serif;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
+    margin: 0 0 60px;
     text-align: center;
 }
 
 .reservation__form {
-    width: 385px;
-    display: flex;
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    max-width: 641px;
+    margin: 0 auto;
 }
