--- a/blocks/about.css
+++ b/blocks/about.css
@@ -1,3 +1,16 @@
+@keyframes pulsate {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.6;
+    }
+    100% {
+        transform: scale(1.3);
+        opacity: 0;
+    }
+}
+
 .about {
     padding: 100px 80px;
     background-color: #0A2850;
@@ -7,21 +20,25 @@
     box-sizing: border-box;
     display: flex;
     gap: 120px;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .about__title {
 margin: 0;
-font-family: Inter;
+font-family: "Inter","Arial",sans-serif;
 font-style: normal;
 font-weight: 500;
 font-size: 44px;
 line-height: 52px;
-z-index: 1;
+z-index: 3;
 max-width: 251px;
 }
 
 .about__content {
-font-family: "Serif";
+font-family: "Noto Serif", "Times New Roman", serif;
+margin-top: 19px;
+width: 100%;
 font-style: normal;
 font-weight: normal;
 font-size: 20px;
@@ -30,12 +47,14 @@ max-width: 660px;
 z-index: 1;
 position: relative;
 align-self: center;
+margin: 0;
 }
 
 .about__paragraph {
-    margin: 0;
-    margin-top: 119px;
-    margin-bottom: 20px;
+    max-width: 660px;
+    /* margin: 0;  */
+    /* margin-top: 119px; */
+    /* margin-bottom: 20px; */
     z-index: 1;
 }
 
@@ -58,17 +77,4 @@ align-self: center;
 .about__circle_animation_blured {
     transform-origin: center;
     animation: pulsate 1.3s ease-in-out 0s infinite;
-}
-
-@keyframes pulsate {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0.6;
-    }
-    100% {
-        transform: scale(1.093);
-        opacity: 0;
-    }
 }
