--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,10 +1,10 @@
 .footer {
+   background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
   box-sizing: border-box;
   background-color: #1f1f1f;
-   background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
   color: #fff;
-  padding: 108px 60px 80px;
-  min-height: 100px;
+  padding: 100px 60px 80px;
+  min-height: 100px; 
 }
 
 .footer__logo {
@@ -15,36 +15,48 @@
 .footer__columns {
   display: flex;
   justify-content: space-between;
-  }
+  align-items: flex-start;
+  margin-bottom: 108px;
+  color: white;
+}
 
 .footer__column_content_social {
+  font-family: "Inter","Arial",sans-serif;
+font-style: normal;
+line-height: 20px;
   font-weight: bold;
   margin-left: 100px;
   font-size: 16px;
-  line-height: 20px;
+  text-align: right;
 }
+
+.footer__social-heading {
+  margin-bottom: 20px;
+  margin-top: 0;
+} 
 
 .footer__list {
   list-style-type: none;
+  /* color: #fff; */
   padding: 0;
-  margin: 0;
+  margin: 0; 
 }
 
 .footer__list-item {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 10px;
   margin-bottom: 16px;
 }
 
-.footer__column-heading {
-  margin: 0 0 20px;
-}
-
-.footer__column-link {
+.footer__social-link {
   color: white;
   font-size: 16px;
   line-height: 20px;
   text-decoration: none;
   display: flex;
-  align-items: center;
+  align-items: center; 
 }
 
 .footer__social-icon {
@@ -53,11 +65,10 @@
   margin-right: 10px;
 }
 
-.footer__column-link:hover {
+.footer__social-link:hover {
   color: #c1c1c1;
 }
 
 .footer__copyright {
-  margin-top: 108px;
-  margin-bottom: 60px;
+  margin: 108px 0 0;
 }
