--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -9,25 +9,24 @@
 } */
 }
 .menu__title {
-  font-family:  "Inter", serif;
+ font-family:  "Inter", serif;
  font-weight: 500;
  font-size: 44px;
-line-height: 52px;
-color: #2F80ED; 
-text-align: center;
-margin: 0 0 24px;
-  }
+ line-height: 52px;
+ color: #2F80ED;
+ text-align: center;
+ margin: 0 0 24px;
+}
 
 .menu__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
  width: 780px;
- margin-left: auto;
+ margin-left: 80px;
  margin-right: auto;
  margin-bottom: 0 auto;
-font-size: 20px;
-  text-align: center;
-  font-size: 24px;
-  line-height: 30px;
+ font-size: 20px;
+ text-align: center;
+ line-height: 30px;
   color: #fff;
 }
 
@@ -37,7 +36,4 @@ font-size: 20px;
   flex-wrap: wrap;
   gap: 17px 40px;
   margin-top: 71px;
-  flex-wrap: wrap;
 }
-
-
