--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,10 +1,9 @@
 .footer {
-   background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
-  box-sizing: border-box;
-  background-color: #1f1f1f;
-  color: #fff;
-  padding: 100px 60px 80px;
-  min-height: 100px; 
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  padding-right: 100px;
+  padding-bottom: 60px;
+  padding-left: 80px;
+  padding-top: 60px;
 }
 
 .footer__logo {
@@ -20,24 +19,41 @@
   color: white;
 }
 
-.footer__column_content_social {
-  font-family: "Inter","Arial",sans-serif;
-font-style: normal;
-line-height: 20px;
-  font-weight: bold;
-  margin-left: 100px;
-  font-size: 16px;
-  text-align: right;
+.footer__content {
+  justify-content: space-between;
+  display: flex;
 }
+ /* .footer__column_content_social {
+margin-left: auto;
+}  */
 
-.footer__social-heading {
+/* .footer__social-heading {
   margin-bottom: 20px;
   margin-top: 0;
-} 
+} */
+
+ .footer__social-link {
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+}
+
+
+.footer__social-heading {
+  font-family: "Inter", "Arial", sans-serif;
+  font-style: normal;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  padding-bottom: 20px;
+}  
 
 .footer__list {
   list-style-type: none;
-  /* color: #fff; */
+  color: #fff; 
   padding: 0;
   margin: 0; 
 }
@@ -56,8 +72,9 @@ line-height: 20px;
   line-height: 20px;
   text-decoration: none;
   display: flex;
-  align-items: center; 
-}
+  align-items: center;
+  transition: color 1s linear; 
+} 
 
 .footer__social-icon {
   width: 16px;
@@ -71,4 +88,5 @@ line-height: 20px;
 
 .footer__copyright {
   margin: 108px 0 0;
+  color: white;
 }
