--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -6,15 +6,16 @@
 .nav__links {
     display: flex;
     font-family: "Inter", Arial,sans-serif;
+    gap: 20px;
     top: 30px;
-    right: 80px;
-    margin-bottom: auto;
+    padding-right: 80px;
+    margin: 0;
     list-style-type: none;
     position: relative;
     font-weight: 500;
-    line-height: 20px;
+    /* line-height: 20px; */
     align-items: center;
-    list-style: none;
+    /* list-style: none; */
 }
 
 .nav__link {
@@ -27,19 +28,19 @@
     transition-delay: 0s;
 }
 
-.menu__link {
-font-family: Noto "Serif";
+/* .menu__link {
+font-family: "Noto Serif", "Times New Roman", serif;
 font-style: italic;
 font-weight: normal;
 font-size: 20px;
 line-height: 30px;
 color: #2F80ED;
-}
+} */
 
-.recipe__link {
-font-family: Inter;
+/* .recipe__link {
+font-family: "Inter", "Arial", sans -san-serf;
 font-style: normal;
 font-weight: 500;
 font-size: 44px;
 line-height: 52px;
-}
+} */
