--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,11 +19,26 @@
   padding-bottom: 32px;
 }
 
+
 .card__list-item {
+  font-family:"Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 20px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+
+
+/* .card__list-item {
   display: flex;
   padding-bottom: 16px;
   color: #fff;
-}
+} */
 
 .card__list-divider {
 border-bottom: 1px solid #fff;
