--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -4,6 +4,20 @@
 }
 
 .nav__links {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        align-items:center;
+        column-gap: 20px;
+        margin:0;
+        padding: 0; 
+
+    }
+
+
+
+
+/* .nav__links {
     display: flex;
     font-family: "Inter", Arial,sans-serif;
     gap: 20px;
@@ -13,10 +27,10 @@
     list-style-type: none;
     position: relative;
     font-weight: 500;
-    /* line-height: 20px; */
+    line-height: 20px; 
     align-items: center;
-    /* list-style: none; */
-}
+    list-style: none; 
+} */
 
 .nav__link {
     margin-right: 20px;
