--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,7 +32,11 @@
   margin-bottom: 16px;
 }
 
-
+.card__list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
 
 /* .card__list-item {
   display: flex;
