--- a/blocks/header.css
+++ b/blocks/header.css
@@ -11,13 +11,15 @@
     padding-left: 80px;
     padding-right: 80px;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     z-index: 2;
 }
 
 .header__title {
     font-family: "Inter", Arial, sans-serif;
     max-width: 729px;
-    margin-top: 202px;
+    margin-top: 80px;
     font-style: normal;
     font-weight: 500;
     font-size: 60px;
