--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -23,12 +23,13 @@
 .menu__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
  width: 780px;
- margin-left: 80px;
  margin-bottom: 0;
  font-size: 20px;
  text-align: center;
  line-height: 30px;
   padding-top: 24px;
+  margin-left: auto;
+  margin-right: auto;
   color: #fff;
 }
 
