--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
 @import url("../vendor/normalize.css");
 /* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Noto+Serif:ital@1&display=swap'); */
-@import url("../vendor/font.css");
+/* @import url("../vendor/font.css"); */
 @import url("../blocks/header.css");
 @import url("../blocks/page.css");
 @import url("../blocks/card.css");
