--- a/blocks/about.css
+++ b/blocks/about.css
@@ -12,7 +12,7 @@
 }
 
 .about {
-    padding: 100px 80px;
+    padding: 100px 80px 173px;
     background-color: #0A2850;
     color: #fff;
     overflow: hidden;
@@ -52,9 +52,9 @@ margin: 0;
 
 .about__paragraph {
     max-width: 660px;
-    /* margin: 0;  */
+    margin: 0; 
     /* margin-top: 119px; */
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
     z-index: 1;
 }
 
