--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -15,7 +15,7 @@
  font-style: normal;
  line-height: 52px;
  text-align: center;
- padding-top: 100px;
+ /* padding-top: 100px; */
  margin: 0;
  margin-bottom: 0;
 }
@@ -24,6 +24,7 @@
  font-family: "Noto Serif", "Times New Roman", serif;
  width: 780px;
  margin-bottom: 0;
+ margin-top: 24px;
  font-size: 20px;
  text-align: center;
  line-height: 30px;
