--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -19,6 +19,8 @@
     font-size: 44px;
     line-height: 52px;
     font-weight: 500;
+    margin-bottom: 24px;
+    margin-top: 0;
     color: black;
 }
 
@@ -54,6 +56,7 @@
     font-family: "Inter", "Arial", sans-serif;
     font-weight: 500;
     font-size: 20px;
+    margin-bottom: 0;
     line-height: 30px;
     color: black;
 }
