--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,6 +32,10 @@
   margin-bottom: 16px;
 }
 
+.card__list-item:last-of-type {
+  margin-bottom: 0;
+}
+
 .card__list {
   list-style: none;
   padding-left: 0;
