--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -11,7 +11,6 @@
         column-gap: 20px;
         margin:0;
         padding: 0; 
-
     }
 
 
@@ -36,10 +35,7 @@
     /* margin-right: 20px; */
     text-decoration: none;
     color: #000000;
-    transition-property: color;
-    transition-duration: .75s;
-    transition-timing-function: linear;
-    transition-delay: 0s;
+    transition: color 0.3s ease-in-out;
 }
 
 /* .menu__link {
