--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,5 +1,5 @@
 .form {
-  padding: 20px 128px;
+  padding: 0;
 }
 
 
@@ -11,6 +11,10 @@
   margin: 0 0 32px;
 }
 
+
+.form__fieldset:last-of-type {
+  margin-bottom: 0;
+}
 .form__label {
   font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
@@ -54,6 +58,8 @@
 .form__label_type_checkbox {
   flex-direction: row;
     justify-content: center;
+    padding-top: 0;
+
 }
 
 .form__input::placeholder {
@@ -69,10 +75,11 @@
   border-radius: 4px;
   width: 100%;
   line-height: 20px;
+  height: 60px;
   background-color: #2f88ed;
   color: #fff;
   cursor: pointer;
-  padding: 20px 32px;
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
   border: none;
