--- a/blocks/header.css
+++ b/blocks/header.css
@@ -49,7 +49,7 @@
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  margin: 33px 0 0;
+   margin: 28px 0 0 50px;
 }
 
 .header__image {
@@ -103,6 +103,7 @@
     font-size: 16px;
     line-height: 20px;
     padding-top: 0;
+    color: #6f6f6f;
     margin: 0;
 }
 
