--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -17,18 +17,18 @@
  text-align: center;
  /* padding-top: 100px; */
  margin: 0;
- margin-bottom: 0;
+ padding-bottom: 24px;
 }
 
 .menu__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
  width: 780px;
  margin-bottom: 0;
- margin-top: 24px;
+ /* margin-top: 24px; */
  font-size: 20px;
  text-align: center;
  line-height: 30px;
-  padding-top: 24px;
+  /* padding-top: 24px; */
   margin-left: auto;
   margin-right: auto;
   color: #fff;
