--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -22,16 +22,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
-
-
-
-/* 
-.nav__link {
-    /* margin-right: 20px; */
-    /* text-decoration: none; */
-    /* color: #000000; */
-    /* transition: color 0.3s ease-in-out; */
-} */
+}
 
 /* .menu__link {
 font-family: "Noto Serif", "Times New Roman", serif;
