--- a/blocks/header.css
+++ b/blocks/header.css
@@ -24,8 +24,8 @@
     font-weight: 500;
     font-size: 60px;
     line-height: 72px;
-    margin-bottom: 28px;
-    
+    margin: 0 0 0 50px;
+    /* margin-bottom: 28px; */
 }
 
 .header__address {
