--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -15,23 +15,27 @@
  font-style: normal;
  line-height: 52px;
  text-align: center;
- /* padding-top: 100px; */
- margin: 0;
  padding-bottom: 24px;
+
+ /* padding-top: 100px; */
+ /* margin: 0; */
+ 
 }
 
 .menu__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
- width: 780px;
+ max-width: 780px;
  margin-bottom: 0;
  /* margin-top: 24px; */
  font-size: 20px;
  text-align: center;
  line-height: 30px;
+ color: #fff;
+ margin: auto;
   /* padding-top: 24px; */
-  margin-left: auto;
-  margin-right: auto;
-  color: #fff;
+  /* margin-left: auto;
+  margin-right: auto; */
+  
 }
 
 .menu__cards {
