--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -25,13 +25,12 @@
 .menu__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
  max-width: 780px;
- margin-bottom: 0;
  /* margin-top: 24px; */
  font-size: 20px;
  text-align: center;
  line-height: 30px;
  color: #fff;
- margin: auto;
+ margin: 0;
   /* padding-top: 24px; */
   /* margin-left: auto;
   margin-right: auto; */
