--- a/blocks/header.css
+++ b/blocks/header.css
@@ -25,7 +25,7 @@
     font-size: 60px;
     line-height: 72px;
     margin: 0 0 0 50px;
-    /* margin-bottom: 28px; */
+    margin-bottom: 28px; 
 }
 
 .header__address {
