--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -2,38 +2,40 @@
   color: white;
   background-image: url("../images/background_menu.svg");
   background-color: #0a2750;
-  padding: 100px 100px 100px;
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
-}
+  padding: 100px;
+  display: flex;
+  flex-direction: column; 
+  /* align-items: center; */
+  justify-content: center; 
+} 
+
 .menu__title {
  font-family:  "Inter", "Arial", sans-serif;
+ max-width: 780px; 
  font-weight: 500;
  font-size: 44px;
  font-style: normal;
  line-height: 52px;
- text-align: center;
+ /* text-align: center; */
  padding-bottom: 24px;
-
- padding-top: 100px;
- /* margin: 0; */
+ /* padding-top: 100px; */
+ margin: auto;
  
 }
 
 .menu__subtitle {
  font-family: "Noto Serif", "Times New Roman", serif;
  max-width: 780px;
- /* margin-top: 24px; */
+ margin-top: 24px;
+ margin-bottom: 100px;
  font-size: 20px;
  text-align: center;
  line-height: 30px;
  color: #fff;
- margin: 0;
+ margin: auto;
   /* padding-top: 24px; */
-  /* margin-left: auto;
-  margin-right: auto; */
+   margin-left: auto;
+  /* margin-right: auto;  */
   
 }
 
