--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,7 @@
 @import url("../blocks/header.css");
 @import url("../blocks/page.css");
 @import url("../blocks/card.css");
+@import url("../blocks/logo.css");
 @import url("../blocks/menu.css");
 @import url("../blocks/nav.css");
 @import url("../blocks/reservation.css");
